<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constrain_tree"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/gradient_background">


    <EditText
        android:id="@+id/confirm_password_edittext_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/password_edittext_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext_register" />

    <EditText
        android:id="@+id/username_edittext_register"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingHorizontal="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectphoto_button_register" />

    <EditText
        android:id="@+id/email_edittext_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/username_edittext_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext_register" />

    <EditText
        android:id="@+id/password_edittext_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/email_edittext_register"
        app:layout_constraintStart_toStartOf="@+id/email_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext_register" />

    <Button
        android:id="@+id/register_button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/confirm_password_edittext_register"
        app:layout_constraintStart_toStartOf="@+id/confirm_password_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_edittext_register" />

    <TextView
        android:id="@+id/already_have_account_textView"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/already_have_an_account"
        android:textColor="#F6F6F6"
        app:layout_constraintEnd_toEndOf="@+id/register_button_register"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/register_button_register"
        app:layout_constraintTop_toBottomOf="@+id/register_button_register" />

    <ImageButton
        android:id="@+id/selectphoto_button_register"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/image_rounded_button"
        android:contentDescription="@string/todo"
        android:cropToPadding="false"
        android:text="@string/add_photo"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/selectphoto_imageview_register"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:civ_border_width="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/selectphoto_button_register"
        app:layout_constraintEnd_toEndOf="@+id/selectphoto_button_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/selectphoto_button_register"
        app:layout_constraintTop_toTopOf="@+id/selectphoto_button_register" />

    <TextView
        android:id="@+id/add_photo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_photo_register"
        android:textColor="#C5C1C1"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/selectphoto_button_register"
        app:layout_constraintEnd_toEndOf="@+id/selectphoto_button_register"
        app:layout_constraintStart_toStartOf="@+id/selectphoto_button_register"
        app:layout_constraintTop_toTopOf="@+id/selectphoto_button_register" />


</androidx.constraintlayout.widget.ConstraintLayout>